--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "codegen": "ponder codegen",
     "lint": "eslint .",
     "typecheck": "tsc",
-    "update-price": "tsx ./src/cron/updatePrice.ts"
+    "update-price": "tsx ./src/cron/updatePrice.ts",
+    "generateAPIKey": "tsx ./scripts/generateAPI.ts"
   },
   "dependencies": {
     "@hono/swagger-ui": "^0.5.0",
