Exec command Railway

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "typecheck": "tsc",
     "update-price": "tsx ./src/cron/updatePrice.ts",
-    "generateAPIKey": "tsx ./scripts/generateAPI.ts"
+    "generateAPIKey": "tsx ./scripts/generateAPI.ts",
+    "redeploy": "railway redeploy"
   },
   "dependencies": {
     "@hono/swagger-ui": "^0.5.0",
@@ -27,6 +28,7 @@
     "zod-openapi": "^4.2.3"
   },
   "devDependencies": {
+    "@railway/cli": "^4.8.0",
     "@types/node": "^20.17.17",
     "@types/pg": "^8.15.5",
     "eslint": "^8.57.1",
