--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,4 @@ DATABASE_URL="postgresql://<username>:<password>@<host>:<port>/<database>"
 ARBITRUM_RPC_URL="https://arb-mainnet…"
 BASE_RPC_URL="https://base-mainnet…"
 DEGEN_RPC_URL="https://rpc.degen…"
+NEYNAR_API_KEY="000…"
